--- a/app/src/main/res/layout/activity_address.xml
+++ b/app/src/main/res/layout/activity_address.xml
@@ -89,7 +89,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnAddNewAddr"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -98,6 +98,7 @@
             android:paddingVertical="10dp"
             android:paddingHorizontal="20dp"
             android:text="Thêm địa chỉ mới"
+            android:background="@drawable/button_v2"
             android:textColor="#FFFFFF"
             android:textStyle="bold" />
     </LinearLayout>
