--- a/app/src/main/res/layout/activity_update_address.xml
+++ b/app/src/main/res/layout/activity_update_address.xml
@@ -21,7 +21,7 @@
             android:background="#FDCF53"
             android:gravity="center"
             android:paddingVertical="30dp"
-            android:text="Thêm địa chỉ mới"
+            android:text="Thêm địa chỉ"
             android:textColor="@color/white"
             android:textSize="22sp"
             android:textStyle="bold" />
@@ -99,7 +99,7 @@
                     android:layout_weight="1"
                     android:text="Chọn địa chỉ trên bản đồ"
                     android:textColor="#555"
-                    android:textSize="15sp" />
+                    android:textSize="15sp"/>
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/iBtnChooseMap"
@@ -140,6 +140,15 @@
                     android:layout_marginStart="24dp"
                     android:text="Văn phòng" />
             </RadioGroup>
+            <CheckBox
+                android:id="@+id/cbDefaultAddress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:text="Đặt làm địa chỉ mặc định"
+                android:textSize="15sp"
+                android:textColor="#000"
+                />
         </LinearLayout>
     </ScrollView>
 
@@ -158,24 +167,25 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnDeleteAddress"
             android:layout_width="0dp"
             android:layout_weight="1"
+            android:layout_marginHorizontal="5dp"
             android:layout_height="wrap_content"
-            android:backgroundTint="#FFFFFF"
-            android:text="Lưu địa chỉ"
-            android:visibility="gone"
+           android:background="@drawable/button_v1"
+            android:text="Xóa địa chỉ"
             android:textColor="#FF5722"
             android:textStyle="bold" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnSaveAddress"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:backgroundTint="#FF5722"
+           android:background="@drawable/button_v2"
             android:text="Lưu địa chỉ"
+            android:layout_marginHorizontal="5dp"
             android:textColor="#FFFFFF"
             android:textStyle="bold" />
     </LinearLayout>
