--- a/app/src/main/res/layout/item_rv_cart.xml
+++ b/app/src/main/res/layout/item_rv_cart.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:padding="10dp">
 
-    <androidx.appcompat.widget.AppCompatImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/imgFood"
         android:layout_width="80dp"
         android:layout_height="80dp"
@@ -12,7 +12,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:srcCompat="@drawable/img_food" />
+        app:srcCompat="@drawable/img_food"
+        app:shapeAppearanceOverlay="@style/RoundedImageStyle" />
 
     <TextView
         android:id="@+id/tvName"
