--- a/app/src/main/res/layout/fragment_favorite_foods.xml
+++ b/app/src/main/res/layout/fragment_favorite_foods.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <FrameLayout
-        android:id="@+id/frame_header_fv_foods"
+        android:id="@+id/frame_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,7 +31,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/frame_header_fv_foods">
+        app:layout_constraintTop_toBottomOf="@id/frame_header">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewFavorites"
