--- a/app/src/main/res/layout/activity_search_food.xml
+++ b/app/src/main/res/layout/activity_search_food.xml
@@ -13,41 +13,44 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/etSearch"
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/btnBack"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
+            android:background="@drawable/ic_back"
+            android:contentDescription="Voice search"
+            android:foreground="?attr/selectableItemBackgroundBorderless"
+            android:tint="@color/black" />
+
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/searchView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-
             android:layout_weight="1"
             android:background="@drawable/border_search_view"
-            android:backgroundTint="@null"
-            android:drawableEnd="@android:drawable/ic_menu_search"
-            android:drawableTint="@color/black"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:hint="Nhập hoặc nói để tìm món..."
-            android:imeOptions="actionSearch"
-            android:inputType="text"
-            android:maxLines="1"
-            android:paddingStart="12dp"
-            android:paddingTop="8dp"
-            android:paddingEnd="12dp"
-            android:paddingBottom="8dp" />
+            android:hint="Nhập " />
 
         <ImageButton
             android:id="@+id/btnVoice"
             android:layout_width="47dp"
             android:layout_height="47dp"
-            android:foreground="?attr/selectableItemBackgroundBorderless"
             android:background="@android:color/transparent"
             android:contentDescription="Voice search"
+            android:foreground="?attr/selectableItemBackgroundBorderless"
             android:src="@android:drawable/ic_btn_speak_now" />
     </LinearLayout>
 
     <TextView
+        android:id="@+id/tvTitle"
+        android:layout_marginVertical="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
+        android:layout_height="wrap_content"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvSearchResult"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_marginTop="10dp"
-        android:text="Lịch sử tìm kiếm"/>
+        android:layout_weight="1" />
+
 </LinearLayout>
