--- a/app/src/main/res/layout/custom_toolbar.xml
+++ b/app/src/main/res/layout/custom_toolbar.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
 
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content">
 
-    <SearchView
+    <TextView
         android:id="@+id/searchViewFood"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="23dp"
         android:layout_marginBottom="23dp"
         android:background="@drawable/bg_search_view"
-
+        android:padding="10dp"
+        app:drawableLeftCompat="@drawable/ic_search"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.18"
@@ -25,12 +26,12 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:background="@drawable/icon_bg"
+        android:backgroundTint="#FDCF53"
         android:contentDescription="Giỏ hàng"
         android:foreground="?attr/selectableItemBackgroundBorderless"
         android:padding="5dp"
         android:scaleType="centerInside"
         android:src="@drawable/cart"
-        android:backgroundTint="#FDCF53"
         app:layout_constraintBottom_toBottomOf="@+id/searchViewFood"
         app:layout_constraintEnd_toStartOf="@+id/iBtnChatWithShop"
         app:layout_constraintHorizontal_bias="0.5"
@@ -42,10 +43,10 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:background="@drawable/icon_bg"
+        android:backgroundTint="#FDCF53"
         android:contentDescription="Chat"
         android:foreground="?attr/selectableItemBackgroundBorderless"
         android:padding="5dp"
-        android:backgroundTint="#FDCF53"
         android:scaleType="centerInside"
         android:src="@drawable/ic_chat"
         app:layout_constraintBottom_toBottomOf="@+id/iBtnCart"
