--- a/app/src/main/res/layout/item_rv_option_group.xml
+++ b/app/src/main/res/layout/item_rv_option_group.xml
@@ -8,11 +8,12 @@
     <TextView
         android:id="@+id/tvGroupName"
         android:layout_width="match_parent"
-        android:background="#D1D1D1"
+        android:background="@drawable/bg_option_group"
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:text="Kích cỡ"
-        android:textSize="18sp"
+        android:padding="8dp"
+        android:textSize="16sp"
         android:paddingBottom="4dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
